Fix home page icon colors in dark mode

--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -18,7 +18,7 @@ ion-header ion-toolbar {
   color: var(--ion-color-light-shade);
 }
 @media (prefers-color-scheme: dark) {
-  .toolbar-buttons ion-icon {
+  .toolbar-buttons button ion-icon {
     color: var(--ion-color-medium);
   }
 }
